# django-yabl

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: main.yml
bookmarks/: managers.py  models.py  urls.py  utils.py  views.py
bookmarks/docs/: allauth.md  configure.md  frontend.md  setup.md
bookmarks/migrations/: 0001_initial.py  0002_initial.py
bookmarks/static/css/: modal.css  starter.css  throbber.css
bookmarks/templates/: _nav.html  base.html  home.html  sub_list.html
bookmarks/templates/base_template/: _favicons.html  _meta.html  _nav.html
bookmarks/templates/bookmarks/: bookmark_list.html  bookmark_objs.html  items_to_load.html  objs.html
bookmarks/templates/commons/: _badge.html  _panel.html  _tag_form.html  _toggle_bookmark_status.html  _toggle_form.html  action_panel.html  modal.html  tagform.html  toggle.html
bookmarks/templates/tags/: filter_objects_by_tag_model.html  filtered_objs.html  item.html  list_of_tags.html  panel.html  tag_list.html  tag_list_annotated_model.html  tag_list_annotated_model_list.html  tags.html
bookmarks/templates/tags/annotation/: tagged_models.html  tags.html
bookmarks/templatetags/: bookmark_util.py
bookmarks/tests/: conftest.py  test_other_views.py  test_view_del_tag.py  test_view_launch_modal.py  test_view_toggle_status.py
config/: settings.py  urls.py
examples/: admin.py  models.py  urls.py  views.py
examples/fixtures/: bookquotes.yaml  res.yaml  users.yaml
examples/migrations/: 0001_initial.py  0002_alter_samplequote_book.py  0002_initial.py
examples/templates/: book_detail.html
templates/: _nav.html  base.html  home.html  sub_list.html
templates/account/: base.html
templates/examples/: book_detail.html
templates/users/: saved_books.html  saved_quotes.html  user_profile.html
tests/bookmarks/: conftest.py  test_managers.py  test_models.py  test_other_views.py  test_utils.py  test_view_add_tags.py  test_view_del_tag.py  test_view_launch_modal.py  test_view_toggle_status.py
users/: models.py  urls.py  views.py
users/migrations/: 0001_initial.py
utils/: django_init.py  initialize.ipynb
