[tool.poetry]
name = "django-yabl"
version = "0.2.1"
description = "Yet another bookmarking library (yabl) for Django. Bookmark and tag arbitrary models."
authors = ["Marcelino G. Veloso III <mars@veloso.one>"]
readme = "README.md"
repository = "https://github.com/justmars/django-yabl"
license = "MIT"
packages = [
    { include = "bookmarks" }, # because django-yabl differs from bookmarks
    { include = "examples" },
]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0"
django-extensions = "^3.1"
django-debug-toolbar = "^3.2"

[tool.poetry.dev-dependencies]
djhtml = "^1.5.0"
pytest = "^7.1"
pytest-instafail = "^0.4.2"
pytest-sugar = "^0.9.4"
pytest-icdiff = "^0.5"
pytest-cov = "^2.12.1"
pytest-django = "^4.5.1"
mypy = "^0.942"
black = "^22.3.0"
isort = "^5.10.1"
pre-commit = "^2.18.1"
ipykernel = "^6.12.1"
tqdm = "^4.64"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings" # depends on project root
minversion = "6.0"
addopts = "-ra -q --cov"
testpaths = ["tests"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79
include_trailing_comma = 'True'

[tool.black]
line-length = 79
include = '.pyi?$'
exclude = '''
/(
    .git
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | _build
    | buck-out
    | build
    | dist
)/
'''


[build-system]
requires = ["poetry-core>=1.1.12"]
build-backend = "poetry.core.masonry.api"
