[tool.poetry]
name = "django-yabl"
version = "0.2.2"
description = "Yet another bookmarking library (yabl) for Django. Bookmark and tag arbitrary models."
authors = ["Marcelino G. Veloso III <mars@veloso.one>"]
readme = "README.md"
repository = "https://github.com/justmars/django-yabl"
license = "MIT"
packages = [
    { include = "bookmarks" }, # because django-yabl differs from bookmarks
    { include = "examples" },
]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2"
django-extensions = "^3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
pytest-django = "^4.5.1"
pytest-cov = "^2.12.1"
pre-commit = "^2.21"
mkdocs = "^1.4.2"
mkdocstrings = { extras = ["python"], version = "^0.20.0" }
mkdocs-material = "^9.1"
djhtml = "3.0.6"

[tool.pytest.ini_options]
minversion = "7.2"
addopts = "-ra -q --ds=config.settings --doctest-modules --cov"
filterwarnings = [
    "ignore::DeprecationWarning",                                # DeprecationWarning: pkg_resources is deprecated as an API
    "ignore::django.utils.deprecation.RemovedInDjango51Warning", # GET_STORAGE_CLASS_DEPRECATED_MSG
]
testpaths = ["tests"]

[tool.ruff]
ignore = ["F401", "F403"]
fixable = ["F", "E", "W", "I001"]
select = ["F", "E", "W", "I001"]

[tool.ruff.per-file-ignores]
"utils/django_init.py" = ["E402"]

[build-system]
requires = ["poetry-core>=1.4.2"]
build-backend = "poetry.core.masonry.api"
